# saxo-bank-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/saxo/: openapi_inventory.json
docs/: incident-cleanup.md  operator-guide.md
src/saxo_bank_mcp/: __main__.py  _evidence.py  _redaction.py  audit.py  (+136 more)
tests/: live_precheck_test_support.py  test_auth_foundation.py  test_auth_session.py  test_auth_status.py  test_auth_status_cache_path.py  test_credentials.py  test_endpoint_registry.py  test_entitlements_tool.py  test_evidence.py  test_fastmcp_validation_safety.py  test_final_verify.py  test_final_verify_code_timeout.py  test_hard_task_manifest.py  test_hard_task_manifest_publication.py  test_hard_task_summary.py  test_live_evidence_bundle.py  test_live_login.py  test_live_mode.py  test_live_policy.py  test_live_precheck_proof.py  test_live_precheck_proof_cli_failures.py  test_live_precheck_proof_publication.py  test_live_precheck_proof_source_coverage.py  test_live_precheck_proof_state_comparison.py  test_live_precheck_proof_support.py  test_live_precheck_proof_transport_ledger.py  test_live_session_keeper.py  test_live_token_environment.py  test_live_token_refresh.py  test_live_token_refresh_locking.py  test_live_trade_precheck.py  test_live_trade_precheck_http_failures.py  test_live_trade_precheck_mcp_schema.py  test_live_trade_precheck_response_safety.py  test_live_trade_precheck_selection.py  test_live_trade_precheck_success.py  test_live_trade_precheck_validation.py  test_loop_manifest.py  test_loop_schema.py  test_nontrade_write.py  (+46 more)
